2006-03-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* planet/config.ini:
	  Change philn's feed to the RSS1. Escaped HTML in a CDATA
	  section doesn't seem to translate into planet properly.

2006-03-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/www-update:
	* planet/config.ini:
	* src/copy/download/gstreamer-0.10-apps.repo:
	* src/copy/download/gstreamer-0.10-deps.repo:
	* src/copy/download/gstreamer-0.10-gst.repo:
	* src/htdocs/download/Makefile.am:
	* src/htdocs/download/fedora5.xml:
	* src/htdocs/download/index.xml:
	  add the Fedora Core 5 repository, plus repo files, and change
	  the way we handle fedora package repository

2006-03-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* planet/config.ini:
	  Fix the spelling of Phil Normand

2006-03-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* planet/config.ini:
	  Add Phil Normandy's blog

2006-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.5.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	  another release

2006-03-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.4.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.4.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing

2006-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/data-put:
	  fix server to upload to
	* src/htdocs/news/news.xml:
	  add news about gst-python 0.8.4

2006-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-python/0.8.4.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	  about to release a 0.8.4 of gst-python

2006-03-06  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/page.xsl:
	  Add some space on the right content side 
